turtleart.lessons.turtleart.Main.Flower.scala.error
Source:20: error: value filter is not a member of Int
for (0 <- 8) {
          ^